# coap-zephyr-clients

./: .gitignore  LICENSE.txt  README.md  requirements.txt
mbedtls/: CMakeLists.txt  prj.conf  west.yml
mbedtls/src/: main.c  wifi.c
scripts/: build.sh  build_mbedtls_client.sh  build_wolfssl.sh  build_wolfssl_client.sh
scripts/server/: build_libcoap.sh  build_wolfssl.sh  generate_certs.sh
wolfssl/: CMakeLists.txt  Kconfig  prj.conf  prj_pqc.conf  sample.yaml  west.yml
wolfssl/boards/: esp32_devkitc_wroom_procpu.conf
wolfssl/include/: config-wolfssl-libcoap-pqc.h  config-wolfssl-libcoap.h  wifi.h
wolfssl/src/: main.c  main_pqc.c
